Upgrade to java 16